--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -169,6 +169,12 @@ a:active {
 .img-with-text {
   position: relative;
 }
+.img-with-text.flush-with-footer {
+  margin-bottom: -30px;
+}
+.img-with-text .full-width {
+  margin: 0 -15px;
+}
 .text-on-img {
   position: absolute;
   left: 0;
@@ -185,8 +191,8 @@ a:active {
   display: none;
   text-align: left;
 }
-.footer-separate {
-  margin-top: 2em;
+#homeFooter.footer-separate {
+  margin-top: 30px;
   border-top: 1px solid #ccc;
   padding-top: 1em;
 }
@@ -420,9 +426,6 @@ a:active {
   #homeFooter {
     max-width: 1400px;
     margin: 0 auto;
-  }
-  #homeFooter.footer-separate {
-    margin-top: 2em;
   }
 }
 /*** https://github.com/lipis/bootstrap-social ***/
