UI tweak -- allow full-width images to be full with footer.

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -172,8 +172,9 @@ a:active {
 .img-with-text.flush-with-footer {
   margin-bottom: -30px;
 }
-.img-with-text .full-width {
-  margin: 0 -15px;
+.img-with-text.full-width {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 .text-on-img {
   position: absolute;
