--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -174,8 +174,9 @@ a:hover, a:active {
   &.flush-with-footer {
     margin-bottom: -30px;
   }
-  .full-width {
-    margin: 0 -15px;
+  &.full-width {
+    margin-left: -15px;
+    margin-right: -15px;
   }
 }
 .text-on-img {
