--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -27,7 +27,7 @@
 </div>
 {% endif %}
 
-<div class="img-with-text">
+<div class="img-with-text flush-with-footer full-width">
     <img src="{{ url_for('static', filename='img/band_man1.jpg') }}" class="img-responsive" />
     <div class="text-on-img text-bot">
         <h2>LOREM IPSUM</h2>
