--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -4,9 +4,9 @@
  * = Font sizing =
  * Baseline font sizes: body: 18px, headlines: 24px, subheads: 22px, form fields: 18px, buttons: 18px, smaller-text: 14px
  * > 992 font sizes: body: 24px, headlines 32px, subheads: 29px, form fields: 18px, buttons: 18px, smaller-text: 14px
- *
+**/
+/**
  * = Colors =
- *
  **/
 body {
   margin: 0;
@@ -16,7 +16,7 @@ body {
   font-size: 18px;
 }
 a {
-  color: #497856;
+  color: #57675B;
 }
 a:hover,
 a:active {
@@ -155,6 +155,9 @@ a:active {
 .form-group .help-block {
   font-size: 16px;
 }
+.form-group label {
+  font-weight: normal;
+}
 .profile-img {
   float: right;
   margin-top: -70px;
@@ -260,10 +263,6 @@ a:active {
   margin-left: -2em;
 }
 /** styles specific to profile **/
-#saveMsg {
-  margin: 1em 0;
-  display: inline-block;
-}
 .loading-indicator {
   display: none;
   position: absolute;
@@ -294,9 +293,6 @@ a:active {
   }
 }
 @media (min-width: 768px) {
-  #saveMsg {
-    margin-left: 1em;
-  }
   #fullSizeBox {
     background-image: none;
     min-height: auto;
@@ -376,6 +372,10 @@ a:active {
   }
   .pos-bottom-md .btn {
     margin: 0 0 15px 15px;
+  }
+  .form-group input[type=checkbox],
+  .form-group input[type=radio] {
+    margin-top: 9px;
   }
 }
 @media (min-width: 1200px) {
