--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -48,7 +48,7 @@
                         {{ render_field(form.password, label="Password", label_visible=false, tabindex=20) }}
 
                         {# Submit button #}
-                        {{ render_submit_field(form.submit, tabindex=180, label="Log In") }}
+                        {{ render_submit_field(form.submit, tabindex=180, label="Log In", btnSize="btn-lg") }}
                     </form>
 
                     {% if user_manager.enable_forgot_password %}
