--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -134,7 +134,7 @@ a:hover, a:active {
 .tnth-splash-bottom-link {
   color: #fff;
   padding: 8px;
-  font-size: 20px;
+  font-size: 18px;
   &.separator {
     margin: 0 12px;
     border-left: 1px solid #fff;
@@ -344,6 +344,9 @@ a:hover, a:active {
       padding: 6px 24px;
       font-size: 22px;
     }
+  }
+  .tnth-splash-bottom-link {
+    font-size: 24px;
   }
 }
 @media (min-width: 992px) {
