--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -35,6 +35,7 @@
                 </button>
                 <ul class="tnth-dropdown-menu" role="menu">
                     <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
+                    <li><a href="{{PORTAL}}/about">About TrueNTH</a></li>
                     {% if user and user.has_roles('application_developer') %}
                     <li><a href="{{PORTAL}}/clients">Client Applications</a></li>
                     {% endif %}
@@ -55,9 +56,11 @@
                 </ul>
                 {% endif %}
             </div>
+            <!--
             <a class="tnth-white tnth-nav-btn" href="{{PORTAL}}" title="Return to TrueNTH Home">
                 <div id="tnthHomeBtn"></div>
             </a>
+            -->
         </div>
     </div>
     <div id="tnthNavXs">
@@ -74,7 +77,7 @@
                     {% if username %}
                     <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                     {% endif %}
-                    <li><a href="http://truenth.org">About</a></li>
+                    <li><a href="{{PORTAL}}/about">About TrueNTH</a></li>
                     {% if user and user.has_roles('application_developer') %}
                     <li><a href="{{PORTAL}}/clients">Client Applications</a></li>
                     {% endif %}
