Minor change to capitalizaiton of TrueNTH.

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-<h3 class="tnth-headline">Register for TrueNTH</h3>
+<h3 class="tnth-headline">Register for T<span style="text-transform: lowercase">rue</span>NTH</h3>
 
 <p>Register using:</p>
 
