--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -282,6 +282,10 @@ a:active {
   -khtml-opacity: 0.4;
   opacity: 0.4;
 }
+/** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
+#mainNav {
+  height: 71px;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
@@ -293,6 +297,9 @@ a:active {
   }
 }
 @media (min-width: 768px) {
+  #mainNav {
+    height: 124px;
+  }
   #fullSizeBox {
     background-image: none;
     min-height: auto;
