--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -16,15 +16,17 @@
     <p>Learn strategies for developing a new normal in your sex life after treatment for prostate cancer.</p>
     <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
 </div>
-{% endif %}
+{% else %}
 
-{% set intervention = interventions.decision_support_p3p %}
-{% if intervention.user_has_access(user) %}
+    {% set intervention = interventions.decision_support_p3p %}
+    {% if intervention.user_has_access(user) %}
 <div class="portal-item">
     <h2 class="tnth-subhead">Decision Support (P3P)</h2>
     <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
     <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.card_html }}</a>
 </div>
+    {% endif %}
+
 {% endif %}
 
 <div class="img-with-text flush-with-footer full-width">
