--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -2,7 +2,7 @@
 {% block main %}
 
 <div class="portal-item">
-    <h2 class="tnth-subhead">EXPLORE TrueNTH</h2>
+    <h2 class="tnth-subhead">Explore TrueNTH</h2>
     <p>Discover the tools to guide you through the Cancer journey.</p>
     <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/about">Learn More</a>
 </div>
