--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -15,7 +15,7 @@
 {% if current_user.has_role('admin')%}
 Profile for {{ user.username }}
 {% else %}
-My T<span style="text-transform: lowercase">rue</span>NTH Profile
+My TrueNTH Profile
 {% endif %}
 </h3>
 
