--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -37,7 +37,6 @@ a:hover, a:active {
 }
 // Or just set h1?
 .tnth-headline {
-  text-transform: uppercase;
   margin: 30px 0 20px;
   font-size: @headlineSize;
 }
@@ -115,6 +114,7 @@ a:hover, a:active {
   .headline {
     font-size: 20px;
     line-height: 1.1;
+    text-shadow: black 0px 0px 10px;
   }
   .feature-btn-primary {
     margin-top: 0.5em;
@@ -135,6 +135,7 @@ a:hover, a:active {
   color: #fff;
   padding: 8px;
   font-size: 18px;
+  text-shadow: black 0px 0px 10px;
   &.separator {
     margin: 0 12px;
     border-left: 1px solid #fff;
