--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -36,6 +36,7 @@
                         <img src="{{movember_profile}}" width="50" height="50" />
                     </button>
                     <ul class="tnth-dropdown-menu" role="menu">
+                        <li><a href="{{PORTAL}}">Home</a></li>
                         <li><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
                         <li><a href="{{PORTAL}}/about">About TrueNTH</a></li>
                         {% if user and user.has_roles('application_developer') %}
