https://www.pivotaltracker.com/story/show/116335503 - UI changes based on Movember feedback.

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -214,9 +214,12 @@ a:hover, a:active {
   display: none;
   text-align: left;
   &.footer-separate {
-    margin-top: 30px;
-    border-top: 1px solid #ccc;
-    padding-top: 1em;
+    padding-top: 0;
+    .footer-container {
+      margin-top: 30px;
+      border-top: 1px solid #ccc;
+      padding-top: 1em;
+    }
   }
 }
 
