--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -32,7 +32,7 @@
 <div class="img-with-text flush-with-footer full-width">
     <img src="{{ url_for('static', filename='img/band_man1.jpg') }}" class="img-responsive" />
     <div class="text-on-img text-bot">
-        <h2>LOREM IPSUM</h2>
+        <h2 class="tnth-subhead">LOREM IPSUM</h2>
         <p>"Lorem ipsum dolor sit met, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
     </div>
 </div>
