--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -197,6 +197,9 @@ a:active {
   text-align: left;
 }
 #homeFooter.footer-separate {
+  padding-top: 0;
+}
+#homeFooter.footer-separate .footer-container {
   margin-top: 30px;
   border-top: 1px solid #ccc;
   padding-top: 1em;
