--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -85,10 +85,10 @@
 {% macro footer(splash_style=false) -%}
 <div id="homeFooter" {% if splash_style %}class="container-fluid"{% else %}class="container footer-separate"{% endif %}>
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-lg-5 col-lg-offset-1 footer-container">
             <p><small><a href="{{PORTAL}}/about">Contact</a> | <a href="{{PORTAL}}/about">About</a> | <a href="{{PORTAL}}/terms-of-use">Legal</a></small></p>
         </div>
-        <div class="col-xs-6">
+        <div class="col-xs-6 col-lg-5 footer-container">
             <div class="pull-right">
                 <a href="http://us.movember.com" title="Movember"><img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_movember_lockup.png')}}" /></a>
             </div>
