--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -34,7 +34,7 @@
 
         <div class="container{% if splashView %}-fluid{% endif %}">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1">
                     {% block main %}
                     {% endblock %}
                 </div>
