--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -319,6 +319,15 @@ a:hover, a:active {
     font-size: @smallerText;
     padding-top: 0.5em;
   }
+  .text-on-img {
+    padding: 6px;
+    .tnth-subhead {
+      margin: 0;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 @media (min-width: 768px) {
   #mainNav {
