https://www.pivotaltracker.com/story/show/116335503 - Change to placeholders in birthdate in profile.

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -68,10 +68,10 @@ My TrueNTH Profile
                     </select>
                 </div>
                 <div class="col-xs-4">
-                    <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="Date" type="text" maxlength="2" data-birthday="true" required />
+                    <input class="form-control bd-element" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" data-birthday="true" required />
                 </div>
                 <div class="col-xs-4">
-                    <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="Year" type="text" maxlength="4" data-birthday="true" required />
+                    <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" data-birthday="true" required />
                 </div>
             </div>
             <span id="bdError" class="help-block" style="display: none">A block of help text that breaks onto a new line and may extend beyond one line.</span>
