Small edit to temp terms of use text.

--- a/portal/templates/termsofuse.html
+++ b/portal/templates/termsofuse.html
@@ -6,7 +6,7 @@
 
     <h1 class="tnth-headline">TrueNTH Terms of Use</h1>
     <p>
-      This [AD-HOC DRAFT 6/5/2015] Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
+      This Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
 
     </p><p>
     We will not sell Personal Information or Health Information about you to third parties.
