--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -23,7 +23,7 @@
 <p style="margin-top: 2em">Or create a TrueNTH account:</p>
 <form action="" method="POST" novalidate formnovalidate class="form" role="form" style="margin-left: 1em">
 
-    <div class="row" style="position: relative">
+    <div class="row">
         <div class="col-md-7">
             {{ form.hidden_tag() }}
 
@@ -42,11 +42,10 @@
             {{ render_field(form.retype_password, label="Retype Password", label_visible=false, tabindex=240) }}
             {% endif %}
 
+            {{ render_submit_field(form.submit, "Register", tabindex=280) }}
 
         </div>
-        <div class="col-md-5 pos-bottom-md">
-            {{ render_submit_field(form.submit, "Register", tabindex=280) }}
-        </div>
+
     </div>
 </form>
 
