--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -193,6 +193,11 @@ My TrueNTH Profile
                 <input type="checkbox" value="patient"> Patient
             </label>
         </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="test"> Test
+            </label>
+        </div>
     </div>
 
 </div>
